tests/baselines/reference/tsxAttributeInvalidNames.errors.txt
tests/cases/conformance/jsx/file.tsx(10,8): error TS1003: Identifier expected.
tests/cases/conformance/jsx/file.tsx(10,10): error TS1005: ';' expected.
tests/cases/conformance/jsx/file.tsx(10,10): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
tests/cases/conformance/jsx/file.tsx(10,10): error TS2304: Cannot find name 'data'.
tests/cases/conformance/jsx/file.tsx(10,15): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/conformance/jsx/file.tsx(10,18): error TS1005: ':' expected.
tests/cases/conformance/jsx/file.tsx(10,21): error TS1109: Expression expected.
tests/cases/conformance/jsx/file.tsx(10,22): error TS1109: Expression expected.
tests/cases/conformance/jsx/file.tsx(11,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/conformance/jsx/file.tsx(11,8): error TS1003: Identifier expected.
tests/cases/conformance/jsx/file.tsx(11,9): error TS2304: Cannot find name 'data'.
tests/cases/conformance/jsx/file.tsx(11,13): error TS1005: ';' expected.
tests/cases/conformance/jsx/file.tsx(11,20): error TS1161: Unterminated regular expression literal.


==== tests/cases/conformance/jsx/file.tsx (13 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { "data-foo"?: string };
    		test2: { "data-foo"?: string };
    	}
    }
    
    // Invalid names
    <test1 32data={32} />;
           ~~
!!! error TS1003: Identifier expected.
             ~~~~
!!! error TS1005: ';' expected.
             ~~~~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
             ~~~~
!!! error TS2304: Cannot find name 'data'.
                  ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                     ~
!!! error TS1005: ':' expected.
                        ~
!!! error TS1109: Expression expected.
                         ~
!!! error TS1109: Expression expected.
    <test2 -data={32} />;
    ~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
           ~
!!! error TS1003: Identifier expected.
            ~~~~
!!! error TS2304: Cannot find name 'data'.
                ~
!!! error TS1005: ';' expected.
                       
!!! error TS1161: Unterminated regular expression literal.